Revert "IconButton: refactor to fix Dropdown positioning shift on rerender #1914"
This reverts commit bd4ba2707a52a0e3231a7d732110d6dfd77dad45.

--- a/packages/gestalt/src/IconButton.css
+++ b/packages/gestalt/src/IconButton.css
@@ -9,14 +9,6 @@
   outline: 0;
 }
 
-.parentButton {
-  composes: noBorder from "./Borders.css";
-  composes: p0 from "./Whitespace.css";
-  composes: paddingX0 from "./boxWhitespace.css";
-  composes: paddingY0 from "./boxWhitespace.css";
-  composes: transparentBg from "./Colors.css";
-}
-
 .enabled {
   composes: pointer from "./Cursor.css";
 }
